@@ -39,6 +39,7 @@
 * Worldpay: Pass unchanged amount with correct currency exponent [curiousepic]
 * Improve our handling of currencies sans fractions [duff]
 * Stripe: Added support for the contactless magstripe entry mode option [rbalsdon]
+* VisaNet Peru: Change money format to dollars [shasum]
 
 
 == Version 1.58.0 (March 1, 2016)
